[gd_scene load_steps=10 format=2]

[ext_resource path="res://game_script/battle/HurtBox.gd" type="Script" id=2]
[ext_resource path="res://game_script/entities/entity.gd" type="Script" id=3]
[ext_resource path="res://game_script/character_stats/CharacterStats.gd" type="Script" id=4]
[ext_resource path="res://game_script/skills/CharacterSkill.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 17.6471, 26.4706 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16.9456, 26.5234 )

[sub_resource type="Animation" id=17]
resource_name = "Idle"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=18]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("InBattle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "running"
} ]
}

[sub_resource type="Animation" id=19]
resource_name = "running"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("InBattle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}

[node name="entity" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource( 3 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
priority = 1.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 6.13577e-07, 7.01231e-07 )
shape = SubResource( 20 )

[node name="CollisionBody" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Idle" type="Sprite" parent="."]
visible = false
position = Vector2( 4, 2 )
hframes = 3
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 17 )
anims/attack = SubResource( 18 )
anims/running = SubResource( 19 )

[node name="InBattle" type="Sprite" parent="."]
position = Vector2( -7, 0 )
hframes = 3
vframes = 3
frame = 3

[node name="Stats" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Skill" type="Node" parent="."]
script = ExtResource( 5 )

[connection signal="hp_changed" from="Stats" to="." method="_on_Stats_hp_changed"]
